--- a/Analysis code Rmarkdown3.Rmd
+++ b/Analysis code Rmarkdown3.Rmd
@@ -314,7 +314,7 @@ virusCalculator <- function(used_dates) {
   colnames(means_frame) <- c("Date", "Mean RNA flow per 100000")
   means_frame$`Mean RNA flow per 100000` <- as.double(means_frame$`Mean RNA flow per 100000`)
   barplot(means_frame$`Mean RNA flow per 100000`, col='greenyellow', main = 'Mean RNA flow per 100,000 per day', 
-          xlab = 'Date', ylab = 'Mean RNA flow per 100,000')
+          xlab = 'Date', ylab = 'Mean RNA flow per 100,000', names.arg = dates)
   return(means_frame)
 }
 ##########
@@ -342,7 +342,7 @@ virusCalculator_new <- function(used_dates) {
   means_frame$`Mean RNA flow per 100000` <- as.double(means_frame$`Mean RNA flow per 100000`)
   #create a barplot 
   barplot(means_frame$`Mean RNA flow per 100000`, col='greenyellow', main = 'Mean RNA flow per 100,000 per day', 
-          xlab = 'Date', ylab = 'Mean RNA flow per 100,000')
+          xlab = 'Date', ylab = 'Mean RNA flow per 100,000', names.arg = dates)
   return(means_frame)
 }
 ################
