--- a/Analysis code Rmarkdown4.Rmd
+++ b/Analysis code Rmarkdown4.Rmd
@@ -333,6 +333,29 @@ virusCalculator_new <- function(used_dates) {
 ################
 
 data_frame2 <- virusCalculator_new(used_dates)
+
+############### NUMBER OF INSTALLATIONS PER DAY
+totalCalculator_installations <- function(sewer_data) {
+  dates <- unique(sewer_data$newdate) #create a list of unique dates in the dataset 
+  totals <- numeric(length(dates)) #make an object with the length of the number of dates
+  
+  #subtract nr of reported cases of the day before each day to get the difference
+  for (i in 1:(length(totals))) {
+    step1 <- filter(sewer_data, newdate == dates[i]) #select date we want to calculate the nr of new cases for
+    
+    #create data frame of the  dates, and remove duplicates (of installations)
+    df <- step1[!duplicated(step1[,"TP_code"]),]
+    codes<-df$TP_code[!is.na(df$TP_code)]
+    #calculate the number of installations per day
+    sums <- length(codes)
+    totals[i] <- sums
+  }
+  barplot(totals, col = 'greenyellow', names.arg = dates)
+  
+}
+
+totalCalculator_installations(used_dates)
+####################
 ```
 
 
